# QR_generator

./: main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/qr_generator/: __init__.py  cli.py  clipboard.py  config.py  encoder.py  filesystem.py  image.py  logger.py
